--- a/app/views/layouts/no_search.html.erb
+++ b/app/views/layouts/no_search.html.erb
@@ -330,9 +330,9 @@ UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script
 
 // Set colors
 UserVoice.push(['set', {
-  accent_color: '#448dd6',
+  accent_color: '#e2753a',
   trigger_color: 'white',
-  trigger_background_color: 'rgba(46, 49, 51, 0.6)'
+  trigger_background_color: '#e2753a'
 }]);
 
 // Identify the user and pass traits
@@ -354,10 +354,10 @@ UserVoice.push(['identify', {
 }]);
 
 // Add default trigger to the bottom-right corner of the window:
-UserVoice.push(['addTrigger', {mode: 'contact', trigger_position: 'bottom-right' }]);
+UserVoice.push(['addTrigger', {mode: 'satisfaction', trigger_position: 'bottom-right' }]);
 
 // Or, use your own custom trigger:
-//UserVoice.push(['addTrigger', '#id', { mode: 'contact' }]);
+//UserVoice.push(['addTrigger', '#id', { mode: 'satisfaction' }]);
 
 // Autoprompt for Satisfaction and SmartVote (only displayed under certain conditions)
 UserVoice.push(['autoprompt', {}]);
