Make About Us look better

--- a/app/views/layouts/no_search.html.erb
+++ b/app/views/layouts/no_search.html.erb
@@ -80,7 +80,9 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="col-md-4">
 				<h2>About Us</h2>
 				<br />
-				<p>Evventor is an innovative community marketplace that enables people list and discover a wide variety of events suppliers around them to make their event successful. We know quality, speed and reviews are important concerns when selecting your desired event service provider. That’s why if you’re organizing your next event, Evventor is your best sourcing buddy. Our mission is to help promote businesses online.</p>
+				<p>Evventor is an innovative community marketplace that enables people list and discover a wide variety of events suppliers around them to make their event successful. </p><br/>
+				<p>We know quality, speed and reviews are important concerns when selecting your desired event service provider.</p> <br/>
+				<p>That’s why if you’re organizing your next event, Evventor is your best sourcing buddy. Our mission is to help promote businesses online.</p>
 			</div>
 			<div class="col-md-8">
 				<div class="row">
