Limit file sizes and make sure empty messages don't pass for a messaging

--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -42,14 +42,11 @@
 					<p class="in-pa"> <%= @service.desc_service %></p>
 			   	
 					<div class="style-textarea">
-							<textarea id="body" row="10" col="10"></textarea>
-							
-						
+						<textarea id="body" row="10" col="10" required></textarea>
 					</div>
-
 					
 					<div class="add add-3">	
-						<button id="message-supplier">Contact Supplier</button>
+						<button id="message-supply">Contact Supplier</button>
 					</div>		 
 				<div class="clearfix"> </div>
 			</div>
@@ -66,50 +63,35 @@
 
 <script>
 
-$('.message-mail').click(function(e){
+	
+$('#message-supply').click(function(e){
+	e.preventDefault();
+	if($('#body').val().trim() === ""){
+		console.log("no");
+		 $('.single-top-left').prepend("<div class='alert alert-danger' role='alert'> You cannot send this message at this time!</div>");
+	}
+	else{
 		var messageId = $(this).attr('title');
 		var messageForm = new FormData();
-		messageForm.append('message[read]', 1);
+		messageForm.append('message[body]', $('#body').val().trim());
+		messageForm.append('message[profile_id]', <%= @service.profile_id %>);
 
 		$.ajax({
-		  url: "/messages/"+messageId,
-		 type: "PATCH",
-		 data: messageForm,
-		cache: false,
-  contentType: false,
-  processData: false,
-	  success: function(resp){ 
-			console.log(resp);
-			},
-		 fail:  function(resp){
-			console.log(resp);
-	   		}
-		});
+				url: "/messages/",
+				type: "POST",
+				data: messageForm,
+			   cache: false,
+		 contentType: false,
+		 processData: false,
+			 success: function(resp){ 
+				 console.log(resp);
+				 $('.single-top-left').prepend("<div class='alert alert-success' role='alert'> Message sent sucessfully!</div>");
+				},
+				fail:  function(resp){
+				 $('.single-top-left').prepend("<div class='alert alert-danger' role='alert'> You cannot send this message at this time!</div>");
+				}
+			});
+	}
 
-	});
-
-	
-$('#message-supplier').click(function(e){
-	e.preventDefault();
-	var messageId = $(this).attr('title');
-	var messageForm = new FormData();
-	messageForm.append('message[body]', $('#body').val().trim());
-	messageForm.append('message[profile_id]', <%= @service.profile_id %>);
-
-$.ajax({
-		url: "/messages/",
-		type: "POST",
-		data: messageForm,
-	   cache: false,
- contentType: false,
- processData: false,
-	 success: function(resp){ 
-		console.log(resp);
-		$('.single-top-left').prepend("<div class='alert alert-success' role='alert'> Message sent sucessfully!</div>");
-		},
-		fail:  function(resp){
-		$('.single-top-left').prepend("<div class='alert alert-danger' role='alert'> You cannot send this message at this time!</div>");
-		}
-	});
 });
 </script>
