Start add context

--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -67,7 +67,6 @@
 $('#message-supply').click(function(e){
 	e.preventDefault();
 	if($('#body').val().trim() === ""){
-		console.log("no");
 		 $('.single-top-left').prepend("<div class='alert alert-danger' role='alert'> <button aria-hidden='true' data-dismiss='alert' class='close' type='button'> × </button> You cannot send this message at this time!</div>");
 	}
 	else{
@@ -75,6 +74,7 @@ $('#message-supply').click(function(e){
 		var messageForm = new FormData();
 		messageForm.append('message[body]', $('#body').val().trim());
 		messageForm.append('message[profile_id]', <%= @service.profile_id %>);
+		messageForm.append('message[service_id]', <%= @service.id %>)
 
 		$.ajax({
 				url: "/messages/",
@@ -86,6 +86,7 @@ $('#message-supply').click(function(e){
 			 success: function(resp){ 
 				 console.log(resp);
 				 $('.single-top-left').prepend("<div class='alert alert-success' role='alert'> <button aria-hidden='true' data-dismiss='alert' class='close' type='button'> × </button> Message sent sucessfully!</div>");
+				 $$('#body').val(""); 
 				},
 				fail:  function(resp){
 				 $('.single-top-left').prepend("<div class='alert alert-danger' role='alert'> <button aria-hidden='true' data-dismiss='alert' class='close' type='button'> × </button> You cannot send this message at this time!</div>");
