--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -221,10 +221,12 @@
         									<h4 class="panel-title">
           										<a class="message-mail" title="<%= message.id %>" data-toggle="collapse" data-parent="#accordion" href="#collapse<%= message.id %>"><%= message.sender.name %></a>
         									</h4>
-        									
       									</div>
       									<div id="collapse<%= message.id %>" class="panel-collapse collapse">
         									<div class="panel-body">
+											<% unless message.service.nil? %>
+												<p><%= message.sender.name %> wrote to you about <%= message.service.name_of_service %> which you posted on <%= message.service.created_at.strftime("%d %B %Y") %> in the <%= message.service.category.name %> category </p>
+											<% end %>
         										<%=  message.body %>
         										<br /><br />
         										<a href="#replyModal<%= message.id %>" class="messaging-body" data-toggle="modal">Reply</a>
@@ -236,14 +238,8 @@
 							</div>
 						</div>
     				</div>
-    				
-    				
   				</div>
-			</div>
-				
-				
-			
-				
+			</div>	
 			</div>
 		</div>
 	</div>
@@ -253,35 +249,27 @@
 </div>
 
 <% @mail_box.each do |message| %>
-		<div class="container">
-  			
-  			<div class="modal fade rplymd" id="replyModal<%= message.id %>" role="dialog">
-    			<div class="modal-dialog">
-    
-      				<div class="modal-content">
-        				<div class="modal-header the-modal-header">
-          					<button type="button" class="close" data-dismiss="modal">&times;</button>
-          					<%= image_tag "app/logo1.png", class: "img-head" %>
-          					<br /><br /><br />
-
-          					<h3 class="modal-title"><%= message.body %> </h3>
-        				</div>
-        				<div class="modal-body md-body" align="center">
-        					
-        						<textarea id="body" row="10" col="10"></textarea>
-								<p class="sender-this" style="display: none;"><%= message.sender.profile.id %></p>
-        						<br /><br /><br />
-        				</div>
-        				<div class="modal-footer the-modal-footer">
-						<button id="message-supplier">Reply</button>
-						
-        					
-        					
-        				</div>
-      				</div>
-      
-    			</div>
-  			</div>
-  
+<div class="container">
+	<div class="modal fade rplymd" id="replyModal<%= message.id %>" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header the-modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<%= image_tag "app/logo1.png", class: "img-head" %>
+					<br /><br /><br />
+					<h3 class="modal-title"><%= message.body %> </h3>
+				</div>
+				<div class="modal-body md-body" align="center">
+					<textarea id="body" row="10" col="10"></textarea>
+					<p class="sender-this" style="display: none;"><%= message.sender.profile.id %></p>
+					<input id="service-this" type="hidden" name="service" value="<%= message.service_id %>">
+					<br /><br /><br />
+				</div>
+				<div class="modal-footer the-modal-footer">
+					<button id="message-supplier">Reply</button>	
+				</div>
+			</div>
 		</div>
+	</div>
+</div>
 <% end %>
