--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -78,13 +78,7 @@
 				<% end %>				
 				<div class="clearfix"></div>
 			</div>
-			<nav>
-				<ul class="pagination pagination-lg" style="margin-left:44%;">
-				<% 1.upto(@total_pages.to_i) do |n| %>
-					<li class="pag-<%= n %>"><%= link_to n, { controller: :services, action: :index, page: n } %></li>
-				<% end %>
-				</ul>
-			</nav>
+			<%= display_pagination :services, :index %>
 		</div>
 	</div>
 
