Booking done for a service

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -2279,6 +2279,13 @@ p.in-pa{
     border-bottom: 1px solid #f0f0f0;
     padding: 1em 0;
 }
+
+.booking{
+    margin: 1em 0;
+    border-bottom: 1px solid #f0f0f0;
+    padding-bottom: 2%;
+}
+
 .pr-single{
     padding-bottom: 1em;
 }
