--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -25,7 +25,7 @@
 			<div class="col-md-2">
 				<br /><br />
 				<ul class="card">
-				<% if @profile.user.id == session[:user_id] %>
+				<% if @profile.user.id == session[:evventor_user] %>
 					<li><a href="/user/sign_out/"><i class="fa fa-user" aria-hidden="true"></i>Sign out</a></li>
 					<% else %>
 					<li><a href="/users/new/"><i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
@@ -86,7 +86,7 @@
 						</div>
 						<br /><br />
 						<div>
-						<% if @profile.user.id == session[:user_id] %>
+						<% if @profile.user.id == session[:evventor_user] %>
 							<button class="the-edit-button" onclick="window.location.href='/users/new/'">Edit Profile</button>
 						<% end %>
 						</div>
@@ -120,7 +120,7 @@
 
 				<div class="navigation-div">
 					<ul class="nav nav-tabs">
-					<% if @profile.user.id == session[:user_id] %>
+					<% if @profile.user.id == session[:evventor_user] %>
 						<li class="active"><a data-toggle="tab" href="#home">New Listing</a></li>
 						<li><a data-toggle="tab" href="#menu1">Mailbox</a></li>
 					<% end %>
@@ -131,7 +131,7 @@
   				</div>
   				<br /><br />
   				<div class="tab-content" align="center">
-				  <% if @profile.user.id == session[:user_id] %>
+				  <% if @profile.user.id == session[:evventor_user] %>
   					<div id="home" class="tab-pane fade in active from-prof">
       					<div class="myskills slideanim">
 							<h3 class="text-center">Post a Listing</h3>
@@ -191,7 +191,7 @@
 						</div>
     				</div>
 					<% end %>
-					<% if @profile.user.id == session[:user_id] %>
+					<% if @profile.user.id == session[:evventor_user] %>
     					<div id="menu3" class="tab-pane fade">
 					<% else %>
 						<div id="menu3" class="tab-pane fade in active from-prof">
@@ -226,7 +226,7 @@
       									<div id="collapse<%= message.id %>" class="panel-collapse collapse">
         									<div class="panel-body">
 											<% unless message.service.nil? %>
-												<p><%= message.sender.name %> wrote to you about <%= message.service.name_of_service %> which you posted on <%= message.service.created_at.strftime("%d %B %Y") %> in the <%= message.service.category.name %> category </p>
+												<p><%= message.sender.name.capitalize %> wrote to you about <%= message.service.name_of_service.capitalize %> which you posted on <%= message.service.created_at.strftime("%d %B %Y") %> in the <%= message.service.category.name %> category </p>
 											<% end %>
         										<%=  message.body %>
         										<br /><br />
@@ -242,23 +242,33 @@
     				<div id="menu4" class="tab-pane fade">
       					<div class="myskills slideanim">
 							<div class="row"><!-- Use this for the loop from the database -->
-  								<div class="col-md-12 main-nav-shadow">
-  									<div style="border-bottom: 1px solid #f2f2f2;" align="left">
-  										<p>So, so and so wants to book your product/service for some date</p>
-  									</div>
-  									<div class="row">
-  										<div class="col-md-4" align="left" style="padding-left: 3.5em;">
-  											<br />
-  											<button class="save-button">Accept</button>
-  										</div>
-  										<div class="col-md-4" align="left">
-  											<br />
-  											<button class="the-edit-button">Decline</button>
-  										</div>
-  										<div class="col-md-4"></div>
-  									</div>
-  									<br />
-  								</div>
+							<% if @bookings.any? %>
+							  <% @bookings.each do |booking| %>
+							  	<% if !booking.accepted? %>
+								<div class="col-md-12 main-nav-shadow booking<%= booking.id %>" style="margin-bottom: 1%;">
+										<div style="border-bottom: 1px solid #f2f2f2;" align="left">
+											<p><%= booking.booker.name.capitalize %> wants to book <%= booking.service.name_of_service.capitalize %> for <%= booking.day_booked.strftime("%d %B %Y") %>
+										</div>
+										<div class="row">
+											<div class="col-md-4" align="left" style="padding-left: 9.5em;">
+												<br />
+												<button class="save-button accept-booking" alt="<%= booking.id %>">Accept</button>
+												<input type="hidden" value="<%= booking.id %>" class="booking-id-holder">
+											</div>
+											<div class="col-md-4" align="left">
+												<br />
+												<button class="the-edit-button delete-booking">Decline</button>
+											</div>
+											<div class="col-md-4"></div>
+										</div>
+										<br />
+									</div>
+									<% end %>
+								<% end %>
+							<% else %>
+								<p>You have no bookings</p>
+							<% end %>
+
 							</div>
 						</div>
     				</div>
@@ -297,3 +307,28 @@
 	</div>
 </div>
 <% end %>
+
+<script>
+$('.accept-booking').click(function(e){
+	e.preventDefault();
+	var bookingID = $(this).attr('alt');
+	var bookingForm = new FormData();
+	bookingForm.append('booking[accepted]', 1);
+	$.ajax({
+		url: "/bookings/"+bookingID,
+		type: "PATCH",
+		data: bookingForm,
+	   cache: false,
+ contentType: false,
+ processData: false,
+	 success: function(resp){ 
+			//console.log(resp);
+		//console.log($('.booking'+bookingID));
+			$('.booking'+bookingID).fadeOut("slow");
+		},
+		fail:  function(resp){
+			console.log(resp);
+		}
+	});
+});
+</script>
