--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -123,9 +123,10 @@
 					<% if @profile.user.id == session[:evventor_user] %>
 						<li class="active"><a data-toggle="tab" href="#home">New Listing</a></li>
 						<li><a data-toggle="tab" href="#menu1">Mailbox</a></li>
+						<li><a data-toggle="tab" href="#menu4">Bookings</a></li>
 					<% end %>
 						<li><a data-toggle="tab" href="#menu3">Listings</a></li>
-						<li><a data-toggle="tab" href="#menu4">Bookings</a></li>
+						
     					
   					</ul>
   				</div>
@@ -239,13 +240,14 @@
 							</div>
 						</div>
     				</div>
+					<% if @profile.user.id == session[:evventor_user] %>
     				<div id="menu4" class="tab-pane fade">
       					<div class="myskills slideanim">
 							<div class="row"><!-- Use this for the loop from the database -->
 							<% if @bookings.any? %>
 							  <% @bookings.each do |booking| %>
 							  	<% if !booking.accepted? %>
-								<div class="col-md-12 main-nav-shadow booking<%= booking.id %>" style="margin-bottom: 1%;">
+									<div class="col-md-12 main-nav-shadow booking<%= booking.id %>" style="margin-bottom: 1%;">
 										<div style="border-bottom: 1px solid #f2f2f2;" align="left">
 											<p><%= booking.booker.name.capitalize %> wants to book <%= booking.service.name_of_service.capitalize %> for <%= booking.day_booked.strftime("%d %B %Y") %>
 										</div>
@@ -268,10 +270,10 @@
 							<% else %>
 								<p>You have no bookings</p>
 							<% end %>
-
 							</div>
 						</div>
     				</div>
+					<% end %>
   				</div>
 			</div>	
 			</div>
