Make notifications work better

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -113,7 +113,7 @@
 			</div>
 			<% if flash[:error].nil? && !flash[:notice].nil? %>
 				<%= display_service_posted_success flash[:notice] %>
-			<% else %>
+			<% elsif flash[:notice].nil? && !flash[:error].nil? %>
 				<%= display_errors flash[:error] %>
 			<% end %>
 			<div class="col-md-9" style="background-color: #fff;padding: 0;">
