Add currency to price

--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -34,7 +34,7 @@
 						<h3><%= @service.profile.name_of_agency %></h3>
 					<% end %>
 					<div class="pr-single">
-						<p class="reduced ">Minimum price: <%= @service.price %> <%= @service.metric %></p>
+						<p class="reduced "> $<%= @service.price %> <%= @service.metric %></p>
 					</div>
 					<div class="block block-w3">
 						<div class="starbox small ghosting"> </div>
