Update subscription model and corresponding view
Subscription model did not check expiry dates and there was no means of renewing subscription.
This commit made sure a user can be notified 10 days before his expiration date to renew his purchase.

--- a/app/views/pricings/index.html.erb
+++ b/app/views/pricings/index.html.erb
@@ -9,7 +9,7 @@
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<%= stylesheet_link_tag "app/css/pricing_style" %>
 <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -68,9 +68,6 @@
 					</ul>
 				</div>
 				<div class="clear"> </div>
-			<div class="copy-right">
-				<p>Design by <a href="http://w3layouts.com">W3layouts</a></p>
-			</div>
 		</div>
 	<!-- //main -->
 </body>
