Add expiration check to subscription
It turned out a subscription's expiring date could not be checked.
This commit made sure a subscription's expiring date can be checked.

--- a/app/views/pricings/index.html.erb
+++ b/app/views/pricings/index.html.erb
@@ -62,7 +62,7 @@
 						<li><a href="#">200 Portfolio Items</a></li>
 						<li><a href="#">20 Video Uploads</a></li>
 						<li><a href="#">Premium Email Support</a></li>
-						<li><a href="#">Premium Phone Support</a></li>
+						<li><a href="#">Premium Phone and SMS Support</a></li>
 						<li><a href="#">24/7 Support</a></li>
 						<li><a href="#">Pay Now</a></li>
 					</ul>
